# AI_Internship_Practice

./: .gitignore  README.md  pyproject.toml
2026-02-05_Thursday/: Numpy_01.py  Pandas_02.py
2026-02-05_Thursday/Flask/: app.py
2026-02-05_Thursday/Flask/templates/: login.html
2026-02-06_Friday/Flask_Loops/: app.py
2026-02-06_Friday/Flask_Loops/templates/: base.html  index.html  interns.html
2026-02-06_Friday/PraticingFastAPI/: main.py
2026-02-09_Monday/Fastapi_02/: main.py  patient.json
2026-02-09_Monday/SQLAlchemy_and_pyodbc/: app.py
2026-02-10_Tuesday/SQLAlchemy/: app.py
2026-02-10_Tuesday/pyodbc_01/: app.py
2026-02-11_Wednesday/MongoDB/: monodb_01.py
2026-02-12_Thursday/: mongodb_02.py
2026-02-13_Friday/: bs4_scraping.py
2026-02-13_Friday/data/: scraped_data.txt
2026-02-16_Monday/BeautifulSoup/: table_data.csv  table_scrapper.py
2026-02-16_Monday/Selenium/: main.py  my_data.csv
2026-02-17_Tuesday/: practicing_selenium.py
2026-02-19_Thursday/: insurance_charges_prediction.ipynb
2026-02-20_Friday/: insurance_charges_prediction.py
2026-02-23_Monday/: experiment.py
2026-02-24_Tuesday/: experiment2.py  experiment3.py
2026-02-25_Wednesday/: experiment.py
2026-02-26_Thrusday/: FlightPrice.py  PatientChurn.py  params.yaml
2026-02-27_Friday/: esports.py
2026-02-27_Friday/Database/: flight_price.py
2026-03-03_Tuesday/SVM/: test.py
2026-03-05_Thursday/: main.py  model.pkl
2026-03-10_Tuesday/KMeans/: main.py
2026-03-13_Friday/Aprior_Algorithm/: main.py
2026-03-16_Monday/: learning.py
2026-03-18_Wednesday/CNN/: main.py
2026-03-18_Wednesday/LSTM/: main.py
2026-03-19_Thrusday/RNN/: main.py
2026-03-20_Friday/Transformer/: main.py
2026-03-23_Monday/Langchain/: data.txt  main.py  simple_agent.py
2026-03-24_Tuesday/: app.py  main.py
2026-03-25_Wednesday/BA_Automation_Agent/: main.py
2026-03-25_Wednesday/BA_Automation_Agent/prompts/: requirement_prompt.md  task_prompt.md  user_story_prompt.md
2026-03-27_Friday/: main.py
2026-03-30_Monday/Langchain_memory/: Summarization_middleware.py  main.py
2026-03-31_Tuesday/middlewares/: human_in_loop.py  middlewares.py
2026-04-01_Wednesday/: node_style_hook.py  wrap_hook.py
250326_Wednesday/BA_Automation_Agent/: main.py  tools.py
250326_Wednesday/BA_Automation_Agent/prompts/: user_story_prompt.md
Final_Assesment/: db.py  main.py  rag.py
Final_Assesment/chromadb/: chroma.sqlite3
